# EmbeddedLinuxSystems

./: README.md  am335x-boneblack-custom-Led-GpioIRQ.dts  am335x-boneblack-custom-st9776s.dts  am335x-boneblack-custom-xc3sprog.dts  am335x-boneblack-custom.dts  am335x-boneblack-st9776s.dts
Buildroot/: 0001-Cusom-kernel.patch  Config.in  install_image.sh  linux.config
Buildroot/customservice/: Config.in  customservice.mk
Buildroot/files/gpio_libgpiod/: CMakeLists.txt  gpio_libgpiod.c
Buildroot/helloworld/: helloworld.mk
Buildroot/rootfs-overlay/: S25modprobe  S99custom-service
Buildroot/uav_project/: Config.in  uav_project.mk
Buildroot/user_gpio-irq_interface/: Config.in  user_gpio-irq_interface.mk
Buildroot/user_lidar/: Config.in  user_lidar.mk
Buildroot/user_pwm/: Config.in  user_lidar.mk
Buildroot/william/: users.txt
Buildroot/xc3sprog/: CMakeLists.txt  cabledb.cpp  cabledb.h  cablelist.txt  iosysgpiodcreator.cpp  iosysgpiodcreator.h  sysfscreator.cpp  sysgpiod.cpp  sysgpiod.h  utilities.cpp
BusyBox/: inittab
Yocto/meta-nova/: README
Yocto/meta-qt-rpi/: README
kernel/: linux.config
kernel/device-driver/: Makefile  lidar_serial.c
kernel/gpio_interrupt_input/: Makefile  gpio_irq_input.c
kernel/gpio_interrupt_interface/: Makefile  gpio_irq_int.c
kernel/gpio_intrr/: gpio_irq.c
kernel/lidar_i2c-device-driver/: Makefile  debug.txt  lidar_i2c-device-driver.c
kernel/lidar_serial-device-driver/: .Module.symvers.cmd  .lidar_serial.ko.cmd  .lidar_serial.mod.cmd  .lidar_serial.mod.o.cmd  .lidar_serial.o.cmd  .modules.order.cmd  Makefile  (+6 more)
(+56 files in other folders)
